--- a/PineSms.UI/wwwroot/app.css
+++ b/PineSms.UI/wwwroot/app.css
@@ -5,7 +5,7 @@ html, body {
     font-size: 14px;
 }
 
-@media (min-width: 641px) {
+@media (min-width: 768px) {
     html, body {
         font-size: 15px;
     }
